<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1E90FF"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/weather_app"
        android:gravity="center_horizontal"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCityName"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:text="@string/london_GB"
        android:textSize="30sp"
        android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/weather_image"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/weather_icon"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTemp"
                    android:text="@string/_25_c"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textWeatherCondition"
                    android:text="@string/few_clouds"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/max_temp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/min_temp"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/wind"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textViewMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_c"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textViewMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25_c"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_45"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/orange"
                    android:clickable="true"
                    android:contentDescription="@string/change_to_city"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/baseline_add_24"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
