<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1E90FF"
    tools:context=".WeatherActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/weather_app"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/editTextCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:background="@drawable/background_file"
            android:drawableStart="@drawable/location_city_icon"
            android:gravity="center"
            android:hint="@string/enter_city_Name"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:inputType="textPersonName">
        </EditText>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:background="@drawable/search_icon">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_weather"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCityWeather"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:text="@string/london_GB"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/imageViewWeather"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/weather_image"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/weather_icon"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTempWeather"
                    android:text="@string/_25_c"
                    android:textSize="50sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/textViewWeatherConditionWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/few_clouds"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="25dp">
                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/humidity"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewMaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/max_temp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewMinTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/min_temp"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/pressure"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewWind"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/wind"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/textViewHumidityWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewMaxTempWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_c"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewMinTempWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_25_c"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewPressureWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_45"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/textViewWindSpeedWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>